(WIP)Fix gradle bugs, split into editor and engine