@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group = 'com.mpcs.logging'
+group = 'com.mpcs.config'
 version = '1.0-SNAPSHOT'
 
 repositories {
@@ -10,8 +10,17 @@ repositories {
 }
 
 dependencies {
+    implementation project(path: ':Logging')
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
 
 test {
